parte 1 dos resultados

--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -324,12 +324,28 @@ No caso específico da malha fechada onde seria necessário utilizar as leituras
 
 \section{RESULTADOS}
 
+\hspace{4ex}
 
-\hspace{4ex}Neste capítulo, são apresentados e descritos os resultados obtidos dos experimentos feitos em laboratório. É importante que todos os gráficos e figuras apresentados neste capítulo estejam bem visíveis e com qualidade boa. Este é o capítulo mais importante do trabalho, pois é nele que o aluno irá descrever todos os resultados e observações obtidos no experimento.
+\subsection{Programa de controle}
+O sistema no geral não apresentou problemas de conexão com o servidor, como perda de conexão ou atrasos consideráveis nos dados recebidos. Para o caso de não paralelizar a leitura e escrita de dados, foi observada que não houve influencia negativa observável, como na vazão de entrada, a bomba era iniciada quase que instantaneamente. Os dados recebidos dos sensores que representavam o nível estavam bem próximos do valor real, tendo em casos uma diferença em média de mais ou menos um centímetro. 
 
-\subsection{Seções}
+A figura a seguir mostra uma visão geral do programa desenvolvido.
 
-\subsubsection{Subseções}
+%%% Problemas para inserir figuras %%%
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.9\textwidth]{prog-geral.eps}
+\caption{Interface do programa de controle}
+\label{Rotulo}
+\end{figure}
+\hspace{4ex}
+Onde o gráfico principal que está localizado no canto inferior esquerdo apresenta o sinal enviado em tempo real. Os outros quatro gráficos à direita do gráfico principal apresentam as leituras dos possíveis oito canais disponíveis na placa. Entretanto, apenas dois obtinham informação relevante. No canal 0, a leitura do nível do tanque 1 e, no canal 1, a leitura do nível do tanque 2.
+
+
+%\subsubsection{Subseções}
+
+\newpage
+\subsection{Sistema de tanques}
 
 \newpage
 
