--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -86,11 +86,11 @@ CURSO DE ENGENHARIA DE COMPUTAÇÃO
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA Nº EXPERIÊNCIA\\
-TÍTULO DA EXPERIÊNCIA\\
+{\bf{\large RELATÓRIO DA 1ª EXPERIÊNCIA\\
+INTRODUÇÃO AO LABORATÓRIO DE CONTROLE\\
 }}
 \vspace{1.5cm}
-{\large TURMA: \\
+{\large TURMA: 01 A\\
 	GRUPO Nº}
 
 \vspace{3.6cm}
@@ -99,7 +99,7 @@ TÍTULO DA EXPERIÊNCIA\\
 
 \begin{flushright}
 \begin{normalsize}
-NOME COMPLETO 3º ALUNO: Nº MATRÍCULA\\
+ANDRESSA STÉFANY SILVA DE OLIVEIRA: 20160154101\\
 \vspace{0.8cm}
 FERNANDA MONTEIRO DE ALMEIDA 20160154228\\
 \vspace{0.8cm}
@@ -113,7 +113,7 @@ NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
 \vspace{2.5cm}
 
 {\large Natal-RN\\
-2016}
+2017}
 
 \end{center}
 
@@ -125,9 +125,9 @@ NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
 
 \begin{center}
 \begin{normalsize}
-NOME COMPLETO 1º ALUNO: Nº MATRÍCULA\\
+ANDRESSA STÉFANY SILVA DE OLIVEIRA: 2016015410\\
 \vspace{0.8cm}
-NOME COMPLETO 2º ALUNO: Nº MATRÍCULA\\
+FERNANDA MONTEIRO DE ALMEIDA 20160154228\\
 \vspace{0.8cm}
 NOME COMPLETO 3º ALUNO: Nº MATRÍCULA\\
 \vspace{0.8cm}
@@ -137,7 +137,7 @@ NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering TÍTULO DA EXPERIÊNCIA\\}}}
+{\bf{\large {\centering INTRODUÇÃO AO LABORATÓRIO DE CONTROLE\\}}}
 
 \vspace{4cm}
 
@@ -147,8 +147,8 @@ NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
 
 Primeiro Relatório Parcial apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
-avaliação da 1º unidade do semestre 2016.1 do 7º período
-do curso de Engenharia de Computação e Automação da
+avaliação da 1º unidade do semestre 2017.1 do 8º período
+do curso de Engenharia de Computação da
 Universidade Federal do Rio Grande do Norte, sob
 orientação do {\bf Prof. Fábio Meneghetti Ugulino de
 Araújo.}
@@ -166,7 +166,7 @@ Professor:  Fábio Meneghetti Ugulino de Araújo.
 \vspace{2.5cm}
 
 {\large Natal-RN\\
-2016}
+2017}
 
 \end{center}
 
@@ -184,13 +184,7 @@ Professor:  Fábio Meneghetti Ugulino de Araújo.
 
 \begin{flushleft}
 
-\hspace{4ex}Trata-se da apresentação fiel, breve e concisa dos aspectos mais relevantes do
-trabalho, apresentando as ideias essenciais, na mesma progressão e no mesmo
-encadeamento que aparecem no texto. O resumo deve apresentar os objetivos, uma
-visão geral, ampla e, ao mesmo tempo, clara e objetiva do conteúdo do trabalho.\\
-\hspace{4ex}A norma da ABNT recomenda que se use de 150 a 500 palavras, em espaço
-simples, e deve-se usar o verbo na voz ativa e na terceira pessoa singular. Logo abaixo,
-devem ser colocadas as palavras-chave.\\
+\hspace{4ex}O presente trabalho é referente ao desenvolvimento de um software que se comunica com um sistema de tanques, uma planta Quanser, e seu simulador, o qual possui canais para leitura e escrita de sinais. Primeiro, houve a análise matemática das relações entre vazão de entrada, vazão de saída, tensão enviada para a bomba e o nível de água presente no tanque. Além disso, o sistema possui duas situações: malha aberta, a qual o usuário escolhe a tensão a ser enviada; e malha fechada, nesse caso, o usuário indica exatamente o nível que a água deve estar. O usuário também escolhe o tipo de sinal que está sendo enviado (degrau, onda quadrada, entre outros). Posteriormente, fazendo uso de dados adquiridos experimentalmente, obteve as equações referente ao comportamento do fluxo da água com relação à bomba, como também, a associação da altura com a tensão. O comportamento do sistema é informado para o usuário através de gráficos presentes na interface do software, tanto o sinal de entrada escolhido como os valores que são lidos nos canais indicados pelo usuário.\\
 
 \end{flushleft}
 
