--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -190,7 +190,7 @@ Professor:  Fábio Meneghetti Ugulino de Araújo.
 
 \vspace{1.5cm}
 
-\textbf{Palavras-chave:}
+\textbf{Palavras-chave:} sistema de tanques; sistema de controle; software; planta Quanser.
 
 \newpage
 
