--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -309,7 +309,7 @@ trabalho.
 \[ \frac{k_m}{A}u(t)= \frac{a\sqrt{2gh(t)}}{A} \]
 \[ u(t)=  \frac{a\sqrt{2gh(t)}}{k_m}\]
 \begin{equation}\label{eq:1}
-u(t)=k\sqrt{h}
+u(t)=k\sqrt{h(t)}
 \end{equation}
 \hspace{4ex}Com a relação do sinal de entrada com o nível final do tanque, podemos calcular experimentalmente o valor de k, aplicando um sinal de entrada do tipo degrau e observando o seu valor final.
 Com o valor de k calculado, dado um nível sabemos qual a tensão necessária para atingi-lo.
