--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -398,12 +398,9 @@ Onde o gráfico principal que está localizado no canto inferior esquerdo aprese
 \section{CONCLUSÃO}
 
 
-\hspace{4ex}A conclusão, além de guardar uma proporção relativa ao tamanho do trabalho,
-deve guardar uma proporcionalidade também quanto ao conteúdo. Não deve conter
-assuntos desnecessários, nem exageros numa linguagem excessivamente técnica e
-rebuscada. A conclusão deve dar respostas às questões do trabalho, correspondente aos
-objetivos propostos. Deve ser breve, podendo, se necessário, apresentar sugestões para
-pesquisas futuras.
+\hspace{4ex}De acordo com os resultados obtidos, pode-se concluir que na malha fechada, o controlador consegue rastrear bem o degrau, para os demais sinais, esse rastreamento só é possível se a variação do sinal for mais lenta que a constante de tempo do sistema. Enquanto que na malha aberta, é importante ressaltar que o sinal dificilmente ficará no valor calculado teoricamente, devido a interferência de fatores externos e internos, como por exemplo a temperatura, funcionamento da bomba e ajustes dos sensores da planta.
+
+Além disso, o controlador utilizado na malha fechada calcula o erro do nível do tanque e soma com a tensão necessária para chegar na altura desejada pelo usuário, dessa forma, o erro faz o papel de acelerador do sistema, fazendo com que um determinado nível seja alcançado rapidamente, diferentemente do caso em que se utiliza apenas o valor do erro .... SEI ESCREVER NÃAAAAO
 
 \newpage
 
