--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -101,11 +101,11 @@ INTRODUÇÃO AO LABORATÓRIO DE CONTROLE\\
 \begin{normalsize}
 ANDRESSA STÉFANY SILVA DE OLIVEIRA: 20160154101\\
 \vspace{0.8cm}
-FERNANDA MONTEIRO DE ALMEIDA 20160154228\\
+FERNANDA MONTEIRO DE ALMEIDA: 20160154228\\
 \vspace{0.8cm}
 VITOR RAMOS GOMES DA SILVA: 20160154415\\
 \vspace{0.8cm}
-NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
+MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 \end{normalsize}
 \end{flushright}
 
@@ -131,7 +131,7 @@ FERNANDA MONTEIRO DE ALMEIDA 20160154228\\
 \vspace{0.8cm}
 VITOR RAMOS GOMES DA SILVA: 20160154415\\
 \vspace{0.8cm}
-NOME COMPLETO 4º ALUNO: Nº MATRÍCULA\\
+MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 
 \end{normalsize}
 \end{center}
