gráficos malha aberta

--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -368,6 +368,22 @@ Para o caso de malha fechada, o sistema vai tentar compensar o erro da referênc
 \end{figure}
 
 
+
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.8\textwidth]{mfechada-serra-15.eps}
+\caption{Sistem de controle para malha fechada com dente de serra}
+\label{Entrada Dente de serra - fechada}
+\end{figure}
+
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.8\textwidth]{mfechada-rand.eps}
+\caption{Sistem de controle para malha fechada com aleatória}
+\label{Entrada aleatória - fechada}
+\end{figure}
+
+
 \newpage
 
 %%%%%%%%%% CONCLUSÃO %%%%%%%%%%%%%%%
