--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -221,12 +221,15 @@ Professor:  Fábio Meneghetti Ugulino de Araújo.
 \section{INTRODUÇÃO}
 
 \begin{flushleft}
-\hspace{4ex}A introdução serve para o leitor ter uma noção genérica do tema que será
-abordado. Uma boa introdução deve criar uma expectativa positiva no leitor e despertar
-seu interesse pela leitura do restante do trabalho. Deve apresentar, basicamente, a
-delimitação do assunto o(s) objetivo(s) do estudo e sua finalidade, o ponto-de-vista sob
-qual o assunto será tratado, enfim, os elementos necessários para situar o tema do
-trabalho.
+\hspace{4ex}O trabalho descrito neste relatório tem como objetivo o desenvolvimento de uma aplicação capaz de manipular um sistema de tanques Quanser através da utilização da linguagem C++.
+
+A aplicação deve ser capaz de controlar o nível no tanque superior de acordo com a orientação dada pelo usuário. O usuário define a tensão da bomba em volts (para o caso de malha aberta) ou o nível a ser atingido no tanque em centímetros (para o caso de malha fechada), sendo estabelecidos limites na aplicação respeitando os limites físicos do tanque e da bomba. A aplicação deverá realizar esse controle utilizando-se de cinco tipos de sinais: degrau, onda senoidal, onda quadrada, onda do tipo dente de serra, e aleatória. O usuário definirá também as portas de entrada e saída, podendo escolher de uma a oito portas de saída.
+
+
+Através das equações de vazão, pretende-se achar uma relação entre a tensão aplicada pela bomba e nível de água no tanque, de forma que o nível varie o mínimo possível. A partir dessa relação serão desenvolvidas as funções referentes aos cinco tipos de sinais.
+
+
+O resultado será apresentado através de uma interface gráfica, onde o usuário, além de controlar a situação, poderá visualizar as variações ocorrentes nas portas de saída em plano cartesiano, incluindo os níveis nos dois tanques e a tensão na bomba.
 \end{flushleft}
 
 \newpage
@@ -326,7 +329,7 @@ A figura a seguir mostra uma visão geral do programa desenvolvido.
 \centering
 \includegraphics[width=0.9\textwidth]{prog-geral.eps}
 \caption{Interface do programa de controle}
-\label{Rotulo}
+\label{Interface}
 \end{figure}
 \hspace{4ex}
 Onde o gráfico principal que está localizado no canto inferior esquerdo apresenta o sinal enviado em tempo real. Os outros quatro gráficos à direita do gráfico principal apresentam as leituras dos possíveis oito canais disponíveis na placa. Entretanto, apenas dois obtinham informação relevante. No canal 0, a leitura do nível do tanque 1 e, no canal 1, a leitura do nível do tanque 2.
@@ -367,7 +370,9 @@ Para o caso de malha fechada, o sistema vai tentar compensar o erro da referênc
 \label{Entrada Degrau - fechada}
 \end{figure}
 
+Quando se transmite o dente de serra, observa que o sinal de entrada perde suas características, como se pode ver na figura 8, o gráfico principal não tem mais um subida rápida e linear. Porém, na saída, notou-se que o nível não permanecia constante, o nível se assemelhava a função dente de serra com uma subida mais lenta e com descida rápida, mas não brusca.  
 
+\newpage
 
 \begin{figure}[!h]
 \centering
@@ -382,6 +387,7 @@ Para o caso de malha fechada, o sistema vai tentar compensar o erro da referênc
 \caption{Sistem de controle para malha fechada com aleatória}
 \label{Entrada aleatória - fechada}
 \end{figure}
+
 
 
 \newpage
@@ -401,7 +407,7 @@ Além disso, o controlador utilizado na malha fechada calcula o erro do nível d
 
 %%%%%%%% REFERÊNCIAS %%%%%%%%%%%%%%%%%
 
-% Referências bibliogáficas (geradas automaticamente)
+%Referências bibliogáficas (geradas automaticamente)
 \addcontentsline{toc}{chapter}{Referências bibliográficas}
 \bibliography{bib/bibliografia}
 
